--- a/src/components/word/word.astro
+++ b/src/components/word/word.astro
@@ -6,7 +6,7 @@ import styles from "./word.module.scss";
 	<h2 class={styles.heading}>Mot du Coordonnateur National</h2>
 
 	<div class={styles.image}>
-		<img src="/second.webp" alt="Mot du Coordonnateur National" />
+		<img src="/message/message.webp" alt="Mot du Coordonnateur National" />
 	</div>
 
 	<div class={styles.text}>
