--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,5 +17,6 @@ import Project from "@components/projects/project.astro";
 	main {
 		display: grid;
 		gap: 4em;
+		margin-block-end: 4em;
 	}
 </style>
