--- a/src/components/map/map.module.scss
+++ b/src/components/map/map.module.scss
@@ -77,15 +77,17 @@
 				var(--_fixed-used-width)
 			);
 
-			display: block;
-			max-height: clamp(39rem, 48.75vi, 40rem);
-			height: 100%;
+			// display: block;
+			// max-height: clamp(39rem, 48.75vi, 40rem);
+			// height: 100%;
+
+			grid-template-areas:
+				"map text"
+				"block block";
+			gap: 0;
 
 			.text {
 				text-align: right;
-				position: relative;
-				top: 45%;
-				translate: 0 -50%;
 
 				display: inline-block;
 				max-width: var(--_max-width);
@@ -99,11 +101,11 @@
 			}
 
 			.block {
-				clear: left;
+				// clear: left;
 			}
 
 			.image {
-				float: left;
+				// float: left;
 
 				clip-path: polygon(0 0, 100% 0, 80% 100%, 0 100%);
 				shape-outside: polygon(0 0, 100% 0, 80% 100%, 0 100%);
