--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from "@layouts/Layout.astro";
 import Word from "@components/word/word.astro";
 import Map from "@components/map/map.astro";
 import Project from "@components/projects/project.astro";
+import Video from "@components/video/video.astro";
 ---
 
 <Layout title="Prise">
@@ -10,6 +11,7 @@ import Project from "@components/projects/project.astro";
 		<Word />
 		<Project />
 		<Map />
+		<Video />
 	</main>
 </Layout>
 
