added blog section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Word from "@components/word/word.astro";
 import Map from "@components/map/map.astro";
 import Project from "@components/projects/project.astro";
 import Video from "@components/video/video.astro";
+import Blog from "@components/Blog/blog.astro";
 ---
 
 <Layout title="Prise">
@@ -11,6 +12,7 @@ import Video from "@components/video/video.astro";
 		<Word />
 		<Project />
 		<Map />
+		<Blog />
 		<Video />
 	</main>
 </Layout>
