opportuninties section added

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Map from "@components/map/map.astro";
 import Project from "@components/projects/project.astro";
 import Video from "@components/video/video.astro";
 import Blog from "@components/Blog/blog.astro";
+import Opportunities from "@components/opportunities/opportunities.astro";
 ---
 
 <Layout title="Prise">
@@ -13,6 +14,7 @@ import Blog from "@components/Blog/blog.astro";
 		<Project />
 		<Map />
 		<Blog />
+		<Opportunities />
 		<Video />
 	</main>
 </Layout>
