hero section added

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,10 +6,12 @@ import Project from "@components/projects/project.astro";
 import Video from "@components/video/video.astro";
 import Blog from "@components/Blog/blog.astro";
 import Opportunities from "@components/opportunities/opportunities.astro";
+import Hero from "@components/hero/hero.astro";
 ---
 
 <Layout title="Prise">
 	<main>
+		<Hero />
 		<Word />
 		<Project />
 		<Map />
