--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -38,6 +38,11 @@
 			display: grid;
 			gap: 1.5em;
 
+			grid-template-areas:
+				"address"
+				"phone"
+				"email";
+
 			> div {
 				display: grid;
 				gap: 1em;
