--- a/src/components/Home/Word/word.module.scss
+++ b/src/components/Home/Word/word.module.scss
@@ -26,6 +26,10 @@
 		margin-block: 1rem;
 
 		clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+
+		img {
+			object-fit: cover;
+		}
 	}
 
 	.text {
