active links changes

--- a/src/components/Navigation/navigation.module.scss
+++ b/src/components/Navigation/navigation.module.scss
@@ -304,6 +304,10 @@
 					&[data-level="1"] {
 						* {
 							color: var(--text-light);
+
+							&[data-active="true"] {
+								color: var(--accent-secondary);
+							}
 						}
 					}
 				}
