changes in data img hero

--- a/src/components/Hero/page.module.scss
+++ b/src/components/Hero/page.module.scss
@@ -8,7 +8,7 @@
     background-position: center;
     background-size: cover;
 
-    height: clamp(15rem, 30vb, 25.5rem);
+    height: clamp(15rem, 50vi, 28rem);
 
     text-align: center;
     color: var(--white);
