--- a/src/app/a-propos/objectif-global-et-specifique/page.module.scss
+++ b/src/app/a-propos/objectif-global-et-specifique/page.module.scss
@@ -1,33 +1,36 @@
 @use "/src/styles/abstracts" as ab;
 
-.content {
-    display: grid;
-    gap: 1.5em;
+.container {
+	display: flex;
+	flex-direction: column;
+	gap: 2em;
 
-    padding-block: 2em;
+	@include ab.screen-48 {
+		flex-direction: row;
+	}
 
-    @include ab.screen-48 {
-        grid-template-columns: repeat(10, 1fr);
-    }
+	.image {
+		flex: 1;
 
-    .img {
-        @include ab.screen-48 {
-            grid-column: 1/6;
-        }
+		img {
+			border-radius: 0.5em;
+			margin-inline: auto;
+		}
+	}
 
-        img {
-            border-radius: 0.8em;
-            width: 100%;
-            height: 100%;
-        }
-    }
+	.text {
+		flex: 1;
 
-    .para {
-        @include ab.screen-48 {
-            grid-column: 6/11;
-        }
+		display: grid;
+		gap: 0.75em;
 
-        display: grid;
-        gap: clamp(1em, 2vi, 2em);
-    }
+		.list {
+			padding: 0;
+			list-style-position: inside;
+			list-style-type: "– ";
+
+			display: grid;
+			gap: 0.5em;
+		}
+	}
 }
