--- a/src/app/a-propos/resultats-attendus/page.module.scss
+++ b/src/app/a-propos/resultats-attendus/page.module.scss
@@ -11,7 +11,7 @@
 
             ul {
                 padding: 0;
-                padding-top: 2em;
+                padding-block-start: 2em;
 
                 li {
                     list-style: none;
