--- a/src/app/a-propos/resultats-attendus/page.module.scss
+++ b/src/app/a-propos/resultats-attendus/page.module.scss
@@ -1,22 +1,51 @@
-.list {
-    padding-block: 2em;
-    ol {
-        display: grid;
-        gap: 2em;
+@use "/src/styles/abstracts" as ab;
 
-        li {
-            h2 {
-                font-size: 1rem;
-            }
+.listcontainer {
+	.list {
+		display: grid;
+		gap: 2em;
 
-            ul {
-                padding: 0;
-                padding-block-start: 2em;
+		padding: 0;
+		list-style-position: inside;
 
-                li {
-                    list-style: none;
-                }
-            }
-        }
-    }
+		> li {
+			padding: 0;
+
+			h2 {
+				font-size: clamp(1rem, 1.25vi, 1.125rem);
+				display: inline-block;
+			}
+
+			.subList {
+				list-style-type: "– ";
+				list-style-position: inside;
+
+				padding: 0;
+				padding-block-start: 1em;
+			}
+		}
+
+		// > li {
+		// 	padding: 0;
+
+		// 	> * {
+		// 		display: inline-block;
+		// 	}
+
+		// 	h2 {
+		// 		font-size: 1.125rem;
+		// 	}
+
+		// 	.subList {
+		// 		list-style-position: inside;
+		// 		list-style-type: "– ";
+
+		// 		padding: 0;
+		// 		padding-block-start: 1.5em;
+
+		// 		> li {
+		// 		}
+		// 	}
+		// }
+	}
 }
