padding removed from pages and nav bar fix on mobile

--- a/src/app/non-realisations/coordination-et-gestion-du-projet/page.module.scss
+++ b/src/app/non-realisations/coordination-et-gestion-du-projet/page.module.scss
@@ -1,4 +1,9 @@
 .list {
-    padding-block: 2em;
-    height: clamp(25vh, 40vi, 40vh);
+	// height: clamp(25vh, 40vi, 40vh);
+	min-height: 20rem;
+
+	ul {
+		list-style-position: inside;
+		padding: 0;
+	}
 }
