--- a/src/app/a-propos/resultats-attendus/page.module.scss
+++ b/src/app/a-propos/resultats-attendus/page.module.scss
@@ -13,7 +13,7 @@
 
 			h2 {
 				font-size: clamp(1rem, 1.25vi, 1.125rem);
-				display: inline-block;
+				display: inline;
 			}
 
 			.subList {
@@ -24,28 +24,5 @@
 				padding-block-start: 1em;
 			}
 		}
-
-		// > li {
-		// 	padding: 0;
-
-		// 	> * {
-		// 		display: inline-block;
-		// 	}
-
-		// 	h2 {
-		// 		font-size: 1.125rem;
-		// 	}
-
-		// 	.subList {
-		// 		list-style-position: inside;
-		// 		list-style-type: "– ";
-
-		// 		padding: 0;
-		// 		padding-block-start: 1.5em;
-
-		// 		> li {
-		// 		}
-		// 	}
-		// }
 	}
 }
