--- a/src/app/non-realisations/etudes-et-reforcement-des-capacites/page.module.scss
+++ b/src/app/non-realisations/etudes-et-reforcement-des-capacites/page.module.scss
@@ -1,7 +1,9 @@
 .list {
-    padding-block: 2em;
-    ul {
-        display: grid;
-        gap: 1em;
-    }
+	ul {
+		padding: 0;
+		list-style-position: inside;
+
+		display: grid;
+		gap: 1em;
+	}
 }
