--- a/src/components/Home/Hero/hero.module.scss
+++ b/src/components/Home/Hero/hero.module.scss
@@ -52,7 +52,7 @@
 		flex: 0 0 100%;
 		min-width: 0;
 
-		height: calc(100vb - var(--nav, 0));
+		height: calc(100dvb - var(--nav, 0));
 
 		position: relative;
 	}
