--- a/src/styles/abstracts/_media-queries.scss
+++ b/src/styles/abstracts/_media-queries.scss
@@ -51,3 +51,15 @@
 		@content;
 	}
 }
+
+@mixin contact-us-sm {
+	@include screen-48 {
+		@content;
+	}
+}
+
+@mixin contact-us {
+	@include screen-64 {
+		@content;
+	}
+}
