refactor: changed error from module scss to classname

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -79,10 +79,10 @@ main {
 }
 
 .error {
-	font-size: 0.9rem;
+	font-size: 0.75rem;
 	color: var(--error);
 
-	text-align: center;
+	// text-align: center;
 }
 
 .message {
