feat: added individual blog page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -51,6 +51,12 @@
 
 	accent-color: var(--accent-secondary);
 	caret-color: var(--accent-secondary);
+
+	--linkedin: #0077b5;
+	--twitterx: #333333;
+	--facebook: #4867aa;
+	--whatsapp: #25d366;
+	--reddit: #ff5700;
 }
 
 body {
