feat: added contact us api

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -188,8 +188,8 @@ textarea {
 	}
 
 	&[data-load="true"] {
-		width: 4.65em;
-		height: 2em;
+		width: 6rem;
+		height: 3rem;
 	}
 	&:disabled {
 		cursor: not-allowed;
