feat: added supporting text for social share

--- a/src/components/socialShare/socialshare.module.scss
+++ b/src/components/socialShare/socialshare.module.scss
@@ -1,5 +1,15 @@
 @use "/src/styles/abstracts" as ab;
 
+.social_parent {
+	display: grid;
+	gap: 0.75rem;
+
+	h4 {
+		text-align: center;
+		color: var(--accent-secondary);
+	}
+}
+
 .social {
 	display: flex;
 	gap: 1.25em;
