feat: added le ministre page details

--- a/src/app/le-ministere/components/Attribution/attribution.module.scss
+++ b/src/app/le-ministere/components/Attribution/attribution.module.scss
@@ -3,10 +3,13 @@
 .container {
 	.list {
 		list-style-type: "– ";
+		list-style-position: outside;
 	}
 
 	.sublist {
 		list-style-type: disc;
 		padding-block-start: 0.25em;
+
+		margin-inline-start: 1rem;
 	}
 }
