refactor: some minor changes

--- a/src/app/publications/[blogId]/blogId.module.scss
+++ b/src/app/publications/[blogId]/blogId.module.scss
@@ -80,14 +80,12 @@
 		}
 
 		.image {
-			max-height: 32em;
 			margin-block-end: 3em;
 
 			img {
 				width: 100%;
 				max-height: 32em;
-				// height: auto;
-				object-fit: cover;
+				object-fit: contain;
 			}
 		}
 	}
