feat: added pagination to table

--- a/src/components/table/table.module.scss
+++ b/src/components/table/table.module.scss
@@ -8,6 +8,23 @@
 		font-size: 1.5rem;
 	}
 
+	.info {
+		display: flex;
+		justify-content: space-between;
+	}
+
+	.pagination {
+		text-align: center;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		gap: 1rem;
+
+		svg {
+			font-size: 1.5rem;
+		}
+	}
+
 	.table {
 		display: grid;
 		column-gap: 1.5rem;
