--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,8 @@
 	--blue: hsl(214, 88%, 34%);
 	--black: #000000;
 	--grey: #333333;
+	--grey-light: #f2f2f2;
+	--grey-title: #666;
 
 	--red: #dc0000;
 	--light-green: #22bb33;
